2011-01-08  Benjamin Poulain  <benjamin.poulain@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] PasteboardQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=39771

        Update the code to follow the coding style.

        * platform/qt/PasteboardQt.cpp:
        (WebCore::Pasteboard::writeSelection):
        (WebCore::Pasteboard::plainText):
        (WebCore::Pasteboard::writePlainText):
        (WebCore::Pasteboard::writeURL):

Canonical link: https://commits.webkit.org/65653@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75339 268f45cc-cd09-0410-ab3c-d52691b4dbfc